# industrial_programment_practic

./: .gitignore  CMakeLists.txt  README.md
14/1/: main.cpp
14/2/: Array.h  main.cpp
14/3/: Set.h  main.cpp
2/1/: main.cpp  triangle.cpp  triangle.h
2/2/: circle.cpp  circle.h  main.cpp
2/3/: figure.cpp  figure.h  main.cpp
3/1/: eq2.cpp  eq2.h  main.cpp
3/2/: main.cpp  rational.cpp  rational.h
3/3/: main.cpp  rational.cpp  rational.h
6/2/: main.cpp
6/3/: bay.h  main.cpp  ocean.cpp  ocean.h  sea.cpp  sea.h
7/: main.cpp  sensor.h  type1.h  type2.h
8/: main.cpp  type3.cpp  type3.h  type4.h
9/1/: main.cpp
9/2/: main.cpp
9/3/: main.cpp  set.cpp  set.h
